loginm register header

--- a/src/page/login/index.scss
+++ b/src/page/login/index.scss
@@ -4,7 +4,7 @@
         .header{
         
             .title{
-             color: #00b14f;
+             color: #024CAA;
              font-size: 24px;
              font-style: normal;
              font-weight: 600;
@@ -33,7 +33,7 @@
             margin-top: 30px;
             display: flex;
             justify-content: end;
-            color: #00b14f;
+            color: #024CAA;
             font-size: 14px;
             font-style: normal;
             font-weight: 400;
@@ -41,7 +41,7 @@
         }
         .button-login {
             margin-top: 30px;
-            background: #00b14f;
+            background: #024CAA;
             color: #fff;
             font-size: 14px;
             font-weight: 400;
@@ -50,7 +50,7 @@
             cursor: pointer; 
         }
         .button-login:hover {
-            background: #007a35; 
+            background: #024CAA; 
         }
         .or-login{
             display: flex;
@@ -87,6 +87,6 @@
 
     
     .backgroud{
-        background-color: #00b14f;
+        background-color: #024CAA;
     }
 }
