--- a/src/page/login/index.scss
+++ b/src/page/login/index.scss
@@ -1,92 +1,109 @@
-.loginpage{
-    .login-1{
-        padding: 100px 200px;
-        .header{
-        
-            .title{
-             color: #024CAA;
-             font-size: 24px;
-             font-style: normal;
-             font-weight: 600;
-             line-height: 28px;
-             text-align: left;
-            }
-            .caption{
-             color: #7f878f;
-             font-size: 14px;
-             font-style: normal;
-             font-weight: 400;
-             letter-spacing: 0;
-             line-height: 20px;
-             margin-bottom: 0;
-             text-align: left;
-             margin-top: 10px;
-            } 
-         }
-         .login {
-            margin-top: 30px;
-            .input{
-                margin-top: 30px;
-            }
-        }
-        .forgot-password{
-            margin-top: 30px;
-            display: flex;
-            justify-content: end;
-            color: #024CAA;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 20px;
-        }
-        .button-login {
-            margin-top: 30px;
-            background: #024CAA;
-            color: #fff;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 20px;
-            border: none;  
-            cursor: pointer; 
-        }
-        .button-login:hover {
-            background: #024CAA; 
-        }
-        .or-login{
-            display: flex;
-            justify-content: center;
-            padding: 0px 20px;
-            color: #6f7882;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 22px;
-            margin-bottom: 16px;
-            margin-top: 16px;
-        }
-        .button-login-gg {
-            background: red;
-            color: #fff;
-            font-size: 14px;
-            font-weight: 400;
-            line-height: 20px;
-            border: none;  
-            cursor: pointer; 
-        }
-        .button-login-gg:hover {
-            background: red; 
-        }
-        .accept{
-            margin-top: 30px;
-        }
-        .register-account{
-            margin-top: 30px;
-            display: flex;
-            justify-content: center;
-        }
-        }
-
-    
-    .backgroud{
-        background-color: #024CAA;
+.loginpage {
+  .login-1 {
+    padding: 100px 200px;
+    .header {
+      .title {
+        color: #024caa;
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: 28px;
+        text-align: left;
+      }
+      .caption {
+        color: #7f878f;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        letter-spacing: 0;
+        line-height: 20px;
+        margin-bottom: 0;
+        text-align: left;
+        margin-top: 10px;
+      }
     }
+    .login {
+      margin-top: 30px;
+      .input {
+        margin-top: 30px;
+      }
+    }
+    .forgot-password {
+      margin-top: 30px;
+      display: flex;
+      justify-content: end;
+      color: #024caa;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 20px;
+    }
+    .button-login {
+      margin-top: 30px;
+      background: #024caa;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      border: none;
+      cursor: pointer;
+    }
+    .button-login:hover {
+      background: #024caa;
+    }
+    .or-login {
+      display: flex;
+      justify-content: center;
+      padding: 0px 20px;
+      color: #6f7882;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 22px;
+      margin-bottom: 16px;
+      margin-top: 16px;
+    }
+    .button-login-gg {
+      background: red;
+      color: #fff;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      border: none;
+      cursor: pointer;
+    }
+    .button-login-gg:hover {
+      background: red;
+    }
+    .accept {
+      margin-top: 30px;
+    }
+    .register-account {
+      margin-top: 30px;
+      display: flex;
+      justify-content: center;
+    }
+  }
+
+  .backgroud {
+    background-color: #d9d9d9;
+    .sologan{
+        padding: 250px 0px;
+        margin-left: 10px;
+        .sologan-1{
+            display: flex;
+            justify-content: flex-start;
+            font-size: 36px;
+            color: #024caa;
+            font-weight: 600;
+        }
+        .sologan-2{
+            display: flex;
+            justify-content: flex-start;
+            font-size: 16px;
+            color: #024caa;
+            font-weight: 400;
+            margin-top: 30px;
+        }
+    }
+  }
 }
