--- a/src/page/register/index.scss
+++ b/src/page/register/index.scss
@@ -45,6 +45,25 @@
     }
   }
   .backgroud {
-    background: #024caa;
+    background-color: #d9d9d9;
+    .sologan {
+      padding: 250px 0px;
+      margin-left: 10px;
+      .sologan-1 {
+        display: flex;
+        justify-content: flex-start;
+        font-size: 36px;
+        color: #024caa;
+        font-weight: 600;
+      }
+      .sologan-2 {
+        display: flex;
+        justify-content: flex-start;
+        font-size: 16px;
+        color: #024caa;
+        font-weight: 400;
+        margin-top: 30px;
+      }
+    }
   }
 }
