--- a/src/page/home/index.scss
+++ b/src/page/home/index.scss
@@ -76,7 +76,7 @@
     .title-1 {
       color: #024caa;
       font-size: 24px;
-      font-weight: 500;
+      font-weight: bold;
     }
     .search-dropdown {
       position: relative;
@@ -212,7 +212,7 @@
     .title-2 {
       color: #024caa;
       font-size: 24px;
-      font-weight: 500;
+      font-weight: bold;
       margin-top: 10px;
     }
     .city-card {
@@ -246,8 +246,41 @@
         padding: 10px;
       color: #ffffff;
       font-size: 24px;
-      font-weight: 500;
+      font-weight: bold;
       margin-top: 10px;
+    }
+    .image-home-3{
+      margin-left: 50px;
+      margin-bottom: 20px;
+    }
+  }
+  .home-4 {
+    margin-top: 20px;
+    .title-2 {
+      color: #024caa;
+      font-size: 24px;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    .city-card {
+      padding: 20px 0px;
+
+      .city-card-mini {
+        display: flex;
+        justify-content: center;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+      }
+      .city-card-mini:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+      }
+
+      .city-name {
+        font-size: 20px;
+        font-weight: bold;
+        justify-content: center;
+        display: flex;
+      }
     }
   }
 }
