cam nang, camr nang describe

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,6 +4,9 @@
     font-size: 24px;
     font-weight: bold;
   }
+  a {
+    text-decoration: none;
+  }
 
   .ant-menu-horizontal {
     line-height: 64px; /* Căn chỉnh các item menu */
