--- a/src/components/HomeUser/stylesHome/_home_4.scss
+++ b/src/components/HomeUser/stylesHome/_home_4.scss
@@ -8,7 +8,14 @@
   }
   .city-card {
     padding: 20px 0px;
-
+    justify-content: center;
+    
+    .job-grid {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr); 
+      gap: 16px; 
+      width: 100%;
+    }
     .city-card-mini {
       display: flex;
       justify-content: center;
@@ -28,4 +35,5 @@
       display: flex;
     }
   }
+
 }
