--- a/src/components/HomeUser/stylesHome/_home_3.scss
+++ b/src/components/HomeUser/stylesHome/_home_3.scss
@@ -12,10 +12,32 @@
     font-size: 24px;
     font-weight: bold;
     margin-top: 10px;
+    margin-bottom: 10px;
   }
 
   .image-home-3 {
     margin-left: 50px;
     margin-bottom: 20px;
   }
+  .card-in-home3{
+    margin-top: -20px;
+    flex-direction: column;
+    justify-content: center;
+    padding: 16px;
+    border-radius: 8px;
+    height: 100%;
+    margin-left: 40px;
+  }
+  h3{
+    margin-top: -10px;
+  }
+  p{
+    margin-top: -10px;
+    margin-bottom: -10px;
+  }
+ .why-choose{
+  margin-left: 460px;
+  margin-top: -120px;
+  margin-bottom: 20px;
+ }
 }
